fix(form): fixed visual bug on mobile

--- a/src/components/Form/_style.scss
+++ b/src/components/Form/_style.scss
@@ -1,4 +1,6 @@
 .form {
+  max-width: 100%;
+
   &-container {
     max-width: $content-max-width;
   }
